[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pqcprobe"
dynamic = ["version"]
description = "Probe a server's TLS configuration and post-quantum (ML-KEM) key-exchange readiness"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andre Van Klaveren", email = "andre@vanklaverens.com" }]
keywords = [
    "tls",
    "ssl",
    "post-quantum",
    "pqc",
    "ml-kem",
    "mlkem",
    "harvest-now-decrypt-later",
    "security",
    "audit",
    "cryptography",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "pyOpenSSL>=26.3.0",
    "cryptography>=46.0.0",
]

[project.optional-dependencies]
dev = ["build", "twine", "ruff", "bandit", "pip-audit", "pre-commit"]

[project.scripts]
pqcprobe = "pqcprobe:main"

[project.urls]
# TODO: update OWNER once the public GitHub repo exists.
Homepage = "https://github.com/OWNER/pqcprobe"
Repository = "https://github.com/OWNER/pqcprobe"
Issues = "https://github.com/OWNER/pqcprobe/issues"

[tool.hatch.version]
path = "pqcprobe.py"

[tool.hatch.build.targets.wheel]
only-include = ["pqcprobe.py"]

[tool.hatch.build.targets.sdist]
include = [
    "pqcprobe.py",
    "tests/",
    "docs/",
    "README.md",
    "LICENSE",
    "requirements.txt",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# Linting is enforced in CI. Formatting (`ruff format`) is available for
# contributors but not yet applied to the whole file, so it is not gated;
# line length (E501) is therefore left to the formatter rather than the linter.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line length handled by `ruff format`, not gated here

[tool.bandit]
# Test code intentionally contains sample data, not runnable security concerns.
exclude_dirs = ["tests", ".venv"]
